<resources>
    <string name="app_name">MixandMatch</string>
    <string name="guest">Guest</string>
    <string name="button1">Button</string>
    <string name="settings_desc">settings</string>
    <string name="leaderboard_desc">leaderboard</string>
    <string name="about_desc">About</string>
    <string name="scroll_desc">Scroll</string>
    <string name="input_user">input_user</string>
    <string name="delete">delete</string>
    <string name="mix_and_match">Mix and Match</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="hard">hard</string>
    <string name="about_the_game">About the Game</string>
    <string name="description_about_us">Mix and Match is a pairing game where a player must pair two similar images within a given time. There are different difficulties to choose from as well as the mode of time. Players can input their usernames and see their rankings on the leaderboard. The game also has the delete option to remove the data of their current progress. Mix and Match, a game that you\'ll enjoy!
    </string>
    <string name="about_dev">About the Developers</string>
    <string name="desc_dev">Welcome to our app – BrainTeasers’ Mix and Match! We are a team of passionate developers who strive to create innovative and user-friendly applications for our users. Our mission is to provide you with the best possible experience and help make your daily life easier. We believe in constant improvement, and your feedback is invaluable to us. Thank you for using our app and please do not hesitate to reach out to us with any questions or suggestions. BrainTeasers consists of three mobile application developers: Kai Yaneza, Angelo Echano, and Renze Meinard Mortiga. They are BSIT 2A students who prepared this application to suffice the requirements of their subject IT 112: Mobile Applications – instructed by their astounding adviser, Professor Norianne Calleja Lamadrid.
</string>
    <string name="difficulty">Difficulty:</string>
    <string name="modes">Modes:</string>
    <string name="time_based">Time-Based</string>
    <string name="score_based">Score-Based</string>
    <string name="header_settings">LEADERBOARD</string>
    <string name="share_results">Share Results</string>
    <string name="back">Back</string>
    <string name="progress">Top 10:</string>
    <string name="game_results">Game Results:</string>

    <string name="Etiles">EASY\n(3 pairs)</string>
    <string name="Mtiles">MODERATE\n(4 pairs)</string>
    <string name="Htiles">HARD\n(5 pairs)</string>
    <string name="Extiles">EXTREME\n(6 pairs)</string>
    <string name="spinner_desc">players can add their username</string>
    <string name="display_time">Time</string>
    <string name="accumulated_score">0 pts</string>
    <string name="timed">Time:</string>
    <string name="time_score">00:00</string>
    <string name="image_category">Image Category:</string>

    <string name="alert_title">Warning!</string>
    <string name="alert_message">You are about to delete your account which will delete all your records. Are you sure you want to continue?</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_user">Add User</string>
    <string name="username">Username:</string>
    <string name="skyler123">Skyler123</string>
    <string name="concerns">Concerns</string>
    <string name="desc_concern">If you have any concerns, please send us a message below!</string>
    <string name="email">Email:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="message">Message:</string>
    <string name="submit_concern">Submit</string>
    <string name="submit_button">Submit</string>
    <string name="leaderboard_noRecords">You have no records. Please create an account to store your records.</string>

</resources>