<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".settings"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:fontFamily="@font/candy"
        android:text="@string/header_settings"
        android:textAlignment="center"
        android:textColor="#DC3EA8"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lb_bg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/color_bg"
        android:fontFamily="@font/candy"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/progress"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/results_bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/color_bg"
        android:fontFamily="@font/candy"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/game_results"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/lb_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/share_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candy"
            android:text="@string/share_results" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candy"
            android:text="@string/back" />
    </LinearLayout>


</LinearLayout>