<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/candy_background2"
    tools:context=".leaderboard">

    <TextView
        android:id="@+id/header_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="14dp"
        android:layout_weight="0"
        android:fontFamily="@font/beans"
        android:text="@string/header_settings"
        android:textAlignment="center"
        android:textColor="#e06949"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/lb_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lb_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/color_bg"
        android:fontFamily="@font/beans"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/progress"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/results_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_settings"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/top10_usernames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/lb_bg"
        app:layout_constraintEnd_toStartOf="@+id/top10_scores"
        app:layout_constraintStart_toStartOf="@+id/lb_bg"
        app:layout_constraintTop_toTopOf="@+id/lb_bg" />

    <TextView
        android:id="@+id/top10_scores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/lb_bg"
        app:layout_constraintEnd_toEndOf="@+id/lb_bg"
        app:layout_constraintStart_toEndOf="@+id/top10_usernames"
        app:layout_constraintTop_toTopOf="@+id/lb_bg"/>

    <TextView
        android:id="@+id/results_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/color_bg"
        android:fontFamily="@font/beans"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/game_results"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/share_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_bg" />

    <TextView
        android:id="@+id/gameResult_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/gameResult_username"
        app:layout_constraintEnd_toEndOf="@+id/results_bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/results_bg" />

    <TextView
        android:id="@+id/gameResult_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/results_bg"
        app:layout_constraintEnd_toEndOf="@+id/results_bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/results_bg" />

    <Button
        android:id="@+id/share_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/color_bg"
        android:fontFamily="@font/beans"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/share_results"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/results_bg"
        app:layout_constraintBottom_toTopOf="@id/back_button"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/color_bg"
        android:fontFamily="@font/beans"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="15sp"
        android:onClick="backToMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/share_results"
        app:layout_constraintStart_toStartOf="@+id/share_results"
        app:layout_constraintTop_toBottomOf="@+id/share_results" />

    <TextView
        android:id="@+id/noRecords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard_noRecords"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/lb_bg"
        app:layout_constraintBottom_toBottomOf="@+id/lb_bg"
        app:layout_constraintStart_toStartOf="@+id/lb_bg"
        app:layout_constraintTop_toTopOf="@+id/lb_bg" />


</androidx.constraintlayout.widget.ConstraintLayout>